# agentic-sdlc

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  MORNING-BRIEFING.md  README.md  SECURITY.md
.github/: CODEOWNERS  copilot-instructions.md  copilot-setup-steps.yml
apps/pipeline-doctor/: Dockerfile  Dockerfile.repo-root  README.md  pyproject.toml
apps/pipeline-doctor/pipeline_doctor/: __init__.py  auto_fixer.py  change_proposer.py  drift_detector.py  envelope_validator.py  main.py  models.py
apps/pipeline-doctor/templates/: adr.md.j2
apps/pipeline-doctor/tests/: conftest.py  test_change_proposer.py  test_drift_detector.py  test_envelope_validator.py  test_real_bundles_integration.py
config/: README.md  autonomy.yaml.example  models.yaml.example  org.yaml  repo_autonomy.yaml.example
docs/: API.md  ARCHITECTURE.md  AUTHENTICATION.md  CI-ENFORCEMENT.md  CONCEPT-BRIEF.md  DEMO-RUNBOOK-live.md  DEPLOYMENT.md  GITHUB-ENFORCEMENT.md  KNOWN-ISSUES.md  MVP-control-plane-spec.md  RUN-RECOVERY.md  demo-script.md  explainer.html
experiments/: COMPARISON.md  PHASE_A_REFLECTION.md  README.md  RUBRIC.md  SCORES.json  SCORES_3WAY.json  extract_demo_fixture.py  run_phase_a.py  run_phase_a_blind_read.py  run_phase_b.py  score_phase_a_fixed.py  score_rubric.py
infra/: acr-private.bicep  apps-vnet.bicep  apps.bicep  apps.json  base.bicep  base.json  cae-vnet.bicep  cosmos-private.bicep  main.bicep  main.json  network.bicep  storage-private.bicep
openspec/: config.yaml
scripts/: build-ledger-insights-ui.sh  enforce_bundles.py  gen_api_docs.py  reset_deliveries.py  (+3 more)
(+619 files in other folders)
