[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-doctor"
version = "0.7.0"
description = "Drift detection + bounded auto-fix + change-proposal authoring for agentic SDLC"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Idan Shimon" }]

dependencies = [
    "pydantic>=2.5,<3.0",
    "pyyaml>=6.0",
    "httpx>=0.25",
    "jinja2>=3.1",
    "ledger-core",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "freezegun>=1.4",
]

[tool.setuptools.packages.find]
include = ["pipeline_doctor*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
